--- a/back-end/requirements.txt
+++ b/back-end/requirements.txt
@@ -8,6 +8,7 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
 mysqlclient==2.2.4
+python-dotenv==1.0.1
 SQLAlchemy==2.0.32
 typing_extensions==4.12.2
 Werkzeug==3.0.4
