--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,13 +16,16 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.28",
+    "@react-navigation/stack": "^6.4.1",
+    "@remix-run/web-fetch": "^4.4.2",
+    "expo": "^51.0.34",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.23",
-    "expo-splash-screen": "~0.27.5",
+    "expo-router": "^3.5.23",
+    "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
@@ -39,11 +42,15 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
+  },
+  "resolutions": {
+    "@remix-run/web-fetch": "4.4.2"
   },
   "private": true
 }
